--- a/style1.css
+++ b/style1.css
@@ -1,33 +1,66 @@
-.h1 {
-    text-align: center;
-    color: blue;
+body{
+    margin:0;
 }
-
-.container {
+header{
     display: flex;
-    border-color: aqua blue red beige;
-    float: right;
+    background-color: blue;
+    justify-content:space-between;
+    padding: 10px 15px;
+    align-items: center;
+    
+    & ul{
+        display: flex;
+        list-style: none;
+    }
+    & a{
+        color: aliceblue;
+        font-weight: bold;
+        margin-right: 10px;
+        text-decoration: none;
+    }
 }
-
-.item-1 {
-    background-color: magenta;
-}
-
-.item-2 {
-    background-color: brown;
-}
-
-.item-3 {
-    background-color: violet;
-}
-
-.item-4 {
-    background-color: gold;
-}
-
-.kotak {
-    height: 670px;
+.img img{
     width: 200px;
-    border: solid;
-    margin-left: 100px;
+}
+#banner{
+    height: 100vh;
+    width: 100%;
+    background:url(https://nurulfikri.ac.id/wp-content/uploads/slider/cache/b9cdbba1a0e7c5c45cc35ca06eaebf93/Banner-Web-1-scaled.webp) beige;
+    display: flex;
+    text-align: center;
+    & .Promosi {
+        width: 25%;
+        margin-left:20px;
+        color: aliceblue;
+        & h2{
+            background-color: rgb(24, 21, 187);
+            text-align: justify;
+            padding: 2px;
+            margin-bottom: -17px;
+        }
+
+        & p{
+            background-color: rgb(223, 119, 21);
+            text-align: justify;
+        }
+        
+    }
+}
+#prodi{
+    background-color: mediumblue;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15%;
+    justify-content: center;
+    & .card{
+        border-radius: 15px;
+        background-color: aliceblue;
+        padding: 2px 20px;
+        width: 25%;
+
+    }
+    .btn-mobile{
+        border:1px solid
+    }
 }
